# python_socket_sdk

./: .gitmodules  Pipfile  README.md  pyproject.toml  test.py
core/: socket.py
